Fix border style on mobile

--- a/main.css
+++ b/main.css
@@ -98,9 +98,10 @@ h2 {
 
 input {
   outline: 0;
-  border-width: 0 0 2px;
+  border-width: 0 0 2px 0;
   border-color: black;
   text-align: center;
+  border-style: solid;
 }
 
 input:focus {
